--- a/Sample.WPF.Simulation2/App.xaml
+++ b/Sample.WPF.Simulation2/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="Sample.WPF.Simulation2.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Sample.WPF.Simulation2"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:Sample.WPF.Simulation2">
     <Application.Resources>
          
     </Application.Resources>
