--- a/Sample.WPF.Simulation2/MainWindow.xaml
+++ b/Sample.WPF.Simulation2/MainWindow.xaml
@@ -240,6 +240,8 @@
     <Border Padding="15"
             BorderThickness="1"
             BorderBrush="#FF707070"
+            VerticalAlignment="Center"
+            HorizontalAlignment="Center"
             Margin="10">
 
         <Grid>
